fixed bullet point text wrapping bugs.(issue # 791)
git-svn-id: file:///home/jwt/exe/trunk@2779 38b22f21-9aea-0310-abfc-843a9883df58

--- a/exe/webui/style/Kahurangi/content.css
+++ b/exe/webui/style/Kahurangi/content.css
@@ -123,6 +123,10 @@ p.reading_feedback {
     padding-top: 60px;
 }
 
+.iDevice li {
+	list-style-position: outside;
+}
+
 /* styles for image with text iDevice */
 
 .image_text { 
