--- a/exe/webui/style/default/content.css
+++ b/exe/webui/style/default/content.css
@@ -68,7 +68,7 @@ div#nodeDecoration {
 
 
 .iDevice li {
-	list-style-position: inside;
+	list-style-position: outside;
 }
 
 .iDeviceTitle {
