--- a/exe/webui/style/standardwhite/content.css
+++ b/exe/webui/style/standardwhite/content.css
@@ -79,6 +79,10 @@ input.feedbackbutton {
     padding-top: 10px;
 }
 
+.iDevice li {
+	list-style-position: outside;
+}
+
 
 /* styles for image with text iDevice */
 
